<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/white"
    >

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/formLay"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textSize="35sp"
        />

    <RelativeLayout
        android:id="@+id/formLay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop">

        <EditText
            android:id="@+id/nameEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/emailEntry"
            android:layout_marginBottom="20dp"
            android:hint="@string/nameprompt"
            android:inputType="text"
            android:importantForAutofill="no"
            android:textColor="@color/black"
            android:textColorHint="@color/hintColor" />

        <EditText
            android:id="@+id/emailEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/passwordEntry"
            android:layout_marginBottom="20dp"
            android:digits="1234567890-_abcdefghijklmnopqrstuvwxyz"
            android:hint="@string/emailprompt"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/hintColor" />

        <EditText
            android:id="@+id/passwordEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cnfpasswordEntry"
            android:layout_marginBottom="20dp"
            android:digits="1234567890-_abcdefghijklmnopqrstuvwxyz"
            android:hint="@string/passwordprompt"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/hintColor" />

        <EditText
            android:id="@+id/cnfpasswordEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890-_abcdefghijklmnopqrstuvwxyz"
            android:hint="@string/cnfpasswordprompt"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/hintColor" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintTop_toBottomOf="@+id/formLay"
        android:layout_marginTop="30dp"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:layout_weight="1.3"
            android:id="@+id/signinBtn"
            android:layout_marginEnd="10dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_weight="1"
            android:id="@+id/registerBtn"
            />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />

</androidx.constraintlayout.widget.ConstraintLayout>